fix(client): note map not showing on text notes (closes #10050)

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -2676,7 +2676,7 @@ iframe.print-iframe {
 
 /* Scrolling container */
 
-.note-split:not(.type-text) > .scrolling-container:has(> :is(.note-detail.full-height, .note-list-widget.full-height)) {
+.note-split:not(.type-text.view-mode-normal) > .scrolling-container:has(> :is(.note-detail.full-height, .note-list-widget.full-height)) {
     display: flex;
     flex-direction: column;
 }
